# Hamplard--contracts

./: COMMIT_MESSAGE.txt  DELIVERABLES.md  EVENT_AUDIT_COMPLETION_REPORT.md  EVENT_DOCUMENTATION_INDEX.md  EVENT_INDEXER_INTEGRATION.md  EVENT_INTEGRATION_CHECKLIST.md  EVENT_MIGRATION_GUIDE.md  EVENT_REFERENCE_GUIDE.md  EVENT_SYSTEM_IMPLEMENTATION.md  EVENT_SYSTEM_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_11_RESOLUTION.md  ISSUE_29_RESOLUTION.md  ISSUE_30_RESOLUTION.md  ISSUE_31_RESOLUTION.md  ISSUE_32_RESOLUTION.md  README.md  fix_all.py  fix_multiline.py  resolve_conflicts.py  resolve_final.py  resolve_rest.py  test_enrollment_issue.rs  test_ours.rs
contracts/hamplard/: Cargo.toml  Makefile
contracts/hamplard/src/: lib.rs  test.rs
contracts/hamplard/test_snapshots/test/: test_accept_admin_without_proposal_fails.1.json  test_accept_admin_wrong_address_fails.1.json  test_admin_can_raise_limit.1.json  test_admin_instance_ttl_extended_on_admin_ops.1.json  test_admin_transferred_event_emitted_once_with_full_schema.1.json  test_approve_already_active_course.1.json  test_approve_course_success.1.json  test_approve_course_unauthorized.1.json  test_archive_active_course_rejected.1.json  test_archive_course_blocked_by_active_enrollment.1.json  test_archive_course_with_refunds.1.json  test_archive_paused_course_succeeds.1.json  test_archive_pending_course_rejected.1.json  test_archive_then_reregister_fails.1.json  test_batch_enroll_emits_event_for_each_enrollment.1.json  test_batch_enroll_fails_on_invalid_course.1.json  test_enroll_duplicate.1.json  (+83 more)
