[package]
name = "hamplard"
version = "0.1.0"
edition = "2021"
publish = false
description = "Hamplard — On-chain course enrollment, payments, and certificate issuance on Stellar Soroban"
authors = ["Hamplard Team"]

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
